[package]
name = "dropbox-shared-link-cli"
version = "0.1.0"
authors = ["Kazuki Sawada <kazuki@6715.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "0.3.1"
base64 = "0.12.1"
clap = "3.0.0-beta.1"
serde = { version = "1.0.110", features = ["derive"] }
rand = "0.7.3"
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
